--- a/src/element-variables.scss
+++ b/src/element-variables.scss
@@ -6,6 +6,6 @@ For example, to overwrite the theme color:
 $--color-primary: teal;
 
 /* icon font path, required */
-$--font-path: '~element-ui/lib/theme-chalk/fonts';
+$--font-path: "~element-ui/lib/theme-chalk/fonts";
 
 @import "~element-ui/packages/theme-chalk/src/index";
