Fix: Fixed the bugs on PrintMain View.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,6 +25,10 @@
         display: none;
     }
 
+    #header {
+        display: none;
+    }
+
     .form-container {
         height: 100%;
         width: 100%;
